# Ziggy1

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .verification-complete  .verification-status  ALL_5_PHASES_COMPLETE.md  ALL_PHASES_1_TO_6_COMPLETE.md  ALL_PHASES_COMPLETE.md  CHANGES_VISUALIZATION.md  CLEANUP_CHECKLIST.md  CLEANUP_RECOMMENDATIONS.md  CODEBASE_ASSESSMENT_AND_RECOMMENDATIONS.md  COGNITIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Consolidate-Notes.ps1  DEMO_FAQ.md  DEMO_SCRIPT.md  DEV_NOTES.md  DIAGNOSTIC_SUMMARY.md  DOCUMENTATION_INDEX.md  ENDPOINTS_VERIFIED.md  ENDPOINT_FIX_SUMMARY.md  ENDPOINT_VERIFICATION_PLAN.md  ENDPOINT_VERIFICATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_REPORT.md  ISSUES.md  ISSUE_REPORT.md  Makefile  PHASE_1_AND_2_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETE.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETE.md  PHASE_4_COMPLETION_REPORT.md  PHASE_5_COMPLETE.md  PHASE_5_COMPLETION_REPORT.md  (+30 more)
backend/: .env.demo.example  Dockerfile  Makefile  START_HERE.md  STRUCTURED_LOGGING_EXAMPLES.md  acceptance_test.py  constraints.txt  debug_memory.py  demo_decision_improvement.py  demo_telegram_system.py  endpoint_test_results.json  openapi_temp.json  pyproject.toml  pytest.ini  quick_websocket_test.py  requirements.cpu.txt  requirements.txt  restart_portfolio.py  test_decision_context.py
backend/app/: db.py  main.py
backend/app/agent/: agent.py  tools.py
backend/app/api/: api.js  routes.py  routes_alerts.py  routes_auth.py  routes_chat.py  routes_cognitive.py  routes_crypto.py  routes_demo.py  routes_dev.py  routes_explain.py  routes_feedback.py  routes_integration.py  routes_learning.py  routes_market.py  routes_market_calendar.py  routes_news.py  routes_ops.py  routes_paper.py  routes_performance.py  routes_risk_lite.py  routes_screener.py  routes_signals.py  routes_trace.py  routes_trading.py  routes_websocket.py
backend/app/backtest/: __init__.py  engine.py
backend/app/brokers/: __init__.py  paper_broker.py
backend/app/cognitive/: README.md  __init__.py  cognitive_hub.py  counterfactual.py  episodic_memory.py  meta_learner.py
backend/app/core/: auth_dependencies.py  circuit_breaker.py  exceptions.py  health.py  logging.py  rate_limiting.py  retry.py  router_auto.py  security.py  websocket.py
backend/app/data/: microstructure.py
backend/app/demo/: __init__.py  data_generators.py  route_wrappers.py
backend/app/dev/: __init__.py  bootstrap_user.py  portfolio_setup.py
backend/app/llm/: openai_llm.py
backend/app/memory/: __init__.py  events.py  vecdb.py
backend/app/middleware/: __init__.py  rate_limit.py  request_logging.py
backend/app/models/: __init__.py  api_responses.py  base.py  calibration.json  market.py  paper.py  system.py  trading.py  users.py
backend/app/observability/: __init__.py  metrics.py  slo_targets.py  structured_logging.py
backend/app/paper/: __init__.py  allocator.py  engine.py  features.py  ingest.py  labels.py  learner.py  learner_gateway.py
backend/app/persistence/: audit_log.py  models.py  rehydrate.py  repository.py  shutdown.py  snapshotter.py
backend/app/rag/: chunking.py  embeddings.py  ingest_pdf.py  ingest_web.py  retriever.py  vectorstore.py
backend/app/services/: alert_monitoring.py  alerts.py  async_features.py  backtest.py  brain_integration.py  calibration.py  chart_streaming.py  contracts.py  crypto_providers.py  data_log.py  decision_context.py  decision_log.py  evaluation.py  explain.py  filings.py  iex_cloud_provider.py  integration_hub.py  latency_benchmark.py  learner.py  macro.py  market_providers.py  news.py  news_nlp.py  news_streaming.py  portfolio_streaming.py  position_sizing.py  provider_factory.py  provider_health.py  quarantine.py  regime.py  rss_news_provider.py  sandbox.py  screener.py  social_sentiment.py  telemetry.py  ticker_linker.py  timezone_utils.py  trace.py
backend/app/storage/: __init__.py  (+1 more)
backend/data/: telegram_log.jsonl
backend/docs/: ASYNC_FEATURES.md  ASYNC_REFACTOR_SUMMARY.md
backend/scripts/: audit_routes.py  backend_health_audit.py  eval_vector_memory.py  example_vector_memory_usage.py  list_all_endpoints.py  print_routes.py  run_schemathesis.py  static_endpoint_audit.py  test_all_endpoints.py  verify_all_endpoints.py
backend/tests/: conftest.py  test_api_cognitive.py  test_async_feature_offload.py  test_cognitive_core.py  test_cognitive_systems.py  test_decision_log.py  test_dev_sqlite_health_label.py  test_dev_user_bootstrap.py  test_do_nothing_endpoints.py  test_endpoints_smoke.py  test_event_store_metrics.py  test_event_store_performance.py  test_explain_server.py  test_health.py  test_integration.py  test_market_macro_history.py  test_news_websocket.py  test_no_merge_markers.py  test_observability.py  test_openapi_routes.py  test_paper_import.py  test_paper_lab.py  test_perception_layer.py  test_portfolio_change_detection.py  test_provider_retry.py  test_routes_wired.py  test_rss_cache_fallback.py  test_runner.py  test_sandbox_smoke.py  test_something.py  test_trade_ohlc_batch.py  test_trade_ohlc_timeout.py  test_trade_safety_middleware.py  test_websocket.py  test_websocket_layer.py
(+409 files in other folders)
