[tool.poetry]
name = "ziggy-backend-full"
version = "0.1.0"
description = "Ziggy AI backend with RAG (Qdrant), web/PDF ingest, and citations."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
qdrant-client = "^1.9.2"
sentence-transformers = "^3.0.1"
numpy = "^1.26.4"
duckduckgo-search = "^6.1.6"
trafilatura = "^1.8.0"
beautifulsoup4 = "^4.12.3"
pypdf = "^4.2.0"
python-multipart = "^0.0.9"
tenacity = "^8.3.0"
redis = "^5.0.7"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.11.0"
httpx = "^0.28.1"
aiohttp = "^3.10.5"
sqlalchemy = "^2.0.36"
alembic = "^1.13.2"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
yfinance = "^0.2.50"
feedparser = "^6.0.11"
python-dotenv = "^1.0.1"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
ruff = "^0.5.1"
black = "^24.0.0"
bandit = "^1.7.5"
vulture = "^2.11"
schemathesis = "^3.21.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# CODE HEALTH & QUALITY TOOLS CONFIGURATION
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PD", # pandas-vet
    "SIM", # flake8-simplify
    "N",  # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "C901",  # too complex
    "N806",  # variable in function should be lowercase (conflicts with pydantic)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | migrations
  | build
  | dist
  | \.egg-info
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "migrations/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpaca_trade_api.*",
    "ib_insync.*",
    "psycopg2.*",
    "sqlalchemy.*",
    "pandas.*",
    "numpy.*",
    "websockets.*",
    "uvicorn.*",
    "fastapi.*",
    "pydantic.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "duckduckgo_search.*",
    "trafilatura.*",
    "beautifulsoup4.*",
    "pypdf.*",
    "tenacity.*",
    "redis.*",
    "apscheduler.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests (skipped in CI unless RUN_PERF_TESTS=1)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "logger\\.",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv", "venv", "build", "dist"]
skips = ["B101", "B601", "B602"]  # Skip assert_used and shell=True warnings in dev code

[tool.vulture]
min_confidence = 80
paths = ["app"]
exclude = ["migrations/", "tests/", "__pycache__/", ".venv/", "venv/"]
ignore_decorators = [
    "@app.route",
    "@router.get",
    "@router.post",
    "@router.put",
    "@router.delete",
    "@asynccontextmanager",
    "@property",
    "@staticmethod",
    "@classmethod"
]
ignore_names = ["setUp", "tearDown", "test_*", "main", "__init__"]
